style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  background-color: black;
  color: #e7e7e7;
  min-height: 100vh;
  line-height: 1.5;
}
.topo {
  position: relative;
  height: 100vh;
  overflow: hidden;
}
.imagem-gradiente {
  position: absolute;
  top: 0;
  right: 0;
  opacity: 0.8;
  z-index: -1;
}

.layer-blur {
  height: 0;
  width: 30rem;
  position: absolute;
  top: 20%;
  right: 0;
  box-shadow: 0 0 700px 15px white;
  rotate: -30deg;
  z-index: -1;
}
/*O container da Navbar*/
.cabecalho {
  width: 100%;
  margin: 0 auto;
  padding: 0 2rem;
  position: relative;
  overflow: hidden;
}

/*Header*/
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 5rem;
  position: relative;
  z-index: 1;
}

header h1 {
  margin: 0;
  font-size: 2rem;
  font-weight: 300;
}

nav {
  margin: auto;
  padding: 0.5em 2em;
  background-color: rgba(150, 150, 150, 0.153);
  backdrop-filter: blur(20px);
  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.206);
  border-radius: 1em;
  border: 1px solid rgba(255, 255, 255, 0.21);
}
.menu {
  display: flex;
  font-size: 18px;
}
.nav-links {
  display: flex;
  gap: 2em;
}
.nav-links li,
.opcao li {
  height: 100%;
  padding: 0.5em 1em;
  font-weight: 600;
  cursor: pointer;
}
a {
  color: whitesmoke;
}
.opcao {
  position: absolute;
  padding: 1em 0.5em;
  margin: 0.6em -3em;
  color: whitesmoke;
  background-color: rgba(0, 0, 0, 0.44);
  backdrop-filter: blur(10px);
  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.209);
  border-radius: 1em;
  display: none;
}
li {
  border-radius: 1em;
  transition: 0.3s ease;
}

.dropdown,
.dropdown-2 {
  position: relative;
}
li:hover {
  background-color: rgba(0, 0, 0, 0.505);
}
li:hover .opcao {
  display: block;
}
.opcao-2 {
  position: absolute;
  padding: 0.5em 0.5em;
  margin: -2.5em 12.2em;
  color: whitesmoke;
  background-color: rgba(0, 0, 0, 0.454);
  backdrop-filter: blur(10px);
  box-shadow: rgba(0, 0, 0, 0.215);
  border-radius: 2em;
  display: none;
}
.dropdown-2:hover .opcao-2 {
  display: block;
}
ul {
  list-style: none;
}
nav a {
  text-decoration: none;
}
nav a:hover {
  color: #a7a7a7;
}

.btn-signin {
  background-color: #a7a7a7;
  color: black;
  padding: 0.8rem 2rem;
  border-radius: 50px;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  transition: background-color 0.2s ease;
  cursor: pointer;
}

.btn-signin:hover {
  background-color: white;
}

/*Header content*/
main {
  flex-direction: column;
  justify-content: center;
  min-height: calc(80vh - 6rem);
  display: flex;
  position: relative;
}
.content {
  max-width: 40rem;
  margin-left: 10%;
  z-index: 999;
}
.tag-box {
  position: relative;
  margin-top: 7rem;
  width: 18rem;
  height: 2.5rem;
  border-radius: 50px;
  background: linear-gradient(
    to right,
    #656565,
    #7f42a7,
    #6600c5,
    #5300a0,
    #757575,
    #656565
  );
  background-size: 200%;
  animation: animationGradient 2.5s linear infinite;
  box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
}

@keyframes animationGradient {
  to {
    background-position: 200%;
  }
}
.tag-box .tag {
  position: absolute;
  inset: 3px 3px 3px 3px;
  background-color: black;
  border-radius: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 0.5s ease;
  cursor: pointer;
}

.tag-box .tag:hover {
  color: #5300a0;
}
.content h1 {
  font-size: 4rem;
  font-weight: 600;
  letter-spacing: 0.1em;
  margin: 2rem 0;
  line-height: 1.2;
  text-shadow: 0 0 10px rgba(128, 128, 128, 0.418);
}

.descricao {
  font-size: 1.2rem;
  letter-spacing: 0.05em;
  max-width: 35rem;
  color: gray;
}
.buttons {
  display: flex;
  gap: 1rem;
  margin-top: 3rem;
}

.btn-get-started {
  text-decoration: none;
  border: 1px solid #2a2a2a;
  padding: 0.7rem 1.2rem;
  border-radius: 50px;
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.1em;
  transition: background-color 0.2 ease;
}

.btn-get-started:hover {
  background-color: #1a1a1a;
}

.btn-signing-main {
  text-decoration: none;
  background-color: lightgray;
  color: black;
  padding: 0.6rem 2.5rem;
  border-radius: 50px;
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.1;
  transition: background-color 0.2 ease;
}

.btn-signing-main:hover {
  background-color: gray;
}

.robot-3d {
  position: absolute;
  right: -5%;
  top: 20%;
  transform: translate(-70%);
  width: 500px;
  height: 500px;
  pointer-events: none;
}
.background-3d {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  pointer-events: none;
  z-index: 0;
}

.hamburger {
  display: none;
  background: none;
  border: none;
  color: white;
  font-size: 2rem;
  cursor: pointer;
}

/* MOBILE RESPONSIVE */
@media (max-width: 768px) {
  header {
    padding: 1rem 0.1rem;
  }

  .hamburger {
    display: block;
  }

  nav {
    display: none;
    position: absolute;
    top: 70px;
    right: 20px;
    width: 250px;
    z-index: 999;
  }

  nav.active {
    display: block;
  }

  .nav-links {
    flex-direction: column;
  }

  header h1 {
    font-size: 2rem;
  }

  .btn-signing {
    padding: 0.6rem 1.5rem;
  }

  .content {
    margin-top: 25rem;
  }

  .robot-3d {
    scale: 1;
    top: -25%;
    right: 0;
  }

  .content {
    max-width: 30rem;
    margin-left: 10%;
  }

  .tag-box {
    width: 12rem;
  }

  .content h1 {
    font-size: 2.5rem;
  }

  .description {
    font-size: 1rem;
  }

  .btn-get-started {
    font-size: 0.8rem;
    padding: 0.8rem 1.2rem;
  }

  .btn-signing-main {
    font-size: 0.8rem;
    padding: 0.8rem 2rem;
  }
}

@media (max-width: 480px) {
  header h1 {
    font-size: 1.5rem;
  }

  .btn-signing {
    padding: 0.4rem 1rem;
  }

  .robot-3d {
    top: -28%;
    right: 0;
  }

  .content {
    max-width: 32rem;
    margin-left: 10%;
    margin-top: 15rem;
  }

  .tag-box {
    width: 15rem;
    height: 2rem;
  }

  .content h1 {
    font-size: 2rem;
    margin: 1rem 0;
  }

  .btn-get-started {
    font-size: 0.6rem;
    padding: 0.5rem 1.5rem;
  }

  .btn-signing-main {
    font-size: 0.6rem;
    padding: 0.5rem 1.5rem;
  }
}

